última s modificações no site

--- a/miniverse/html/dc/mulherMaravilha.html
+++ b/miniverse/html/dc/mulherMaravilha.html
@@ -7,7 +7,7 @@
     <title>Miniverse | Mulher-Maravilha</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../css/teste.css">
+    <link rel="stylesheet" href="../../css/styleProd.css">
     <link rel="shortcut icon" type="imagex/png" href="/miniverse/images/logo_miniverse_minimalista.png" />
     <!-- Link para o CSS do Select2 -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
@@ -63,7 +63,7 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="carrinho.html"><img src="../../images/icon_carrinho.svg" class="d-flex"
+                    <a href="../carrinho.html"><img src="../../images/icon_carrinho.svg" class="d-flex"
                             style="width: 30px; margin-right: 20px;  filter: invert();"></a>
                     <a href="conta.html" data-bs-toggle="modal" data-bs-target="#exampleModal"><img
                             src="../../images/icon_conta.svg" class="d-flex" style="width: 30px; filter: invert();"></a>
@@ -140,37 +140,88 @@
                 guerreira.
             </p>
 
-            <h3>Especificações Técnicas</h3>
-            <ul class="especificacoes">
-                <li><strong>Material:</strong> PLA+ premium (biodegradável, resistente e livre de toxinas)</li>
-                <li><strong>Dimensões:</strong> 18cm (altura) x 8cm (largura) x 7cm (profundidade)</li>
-                <li><strong>Peso:</strong> 220g (base firme e equilibrada)</li>
-                <li><strong>Acabamento:</strong> Pintura artesanal com 7 camadas + verniz protetor brilhante</li>
-                <li><strong>Base:</strong> Inclusa – circular preta com logo “Mulher-Maravilha” em alto relevo</li>
-                <li><strong>Resolução de impressão:</strong> 0.1mm (ultra detalhada)</li>
-                <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
-                <li><strong>Tempo de produção:</strong> 3–5 dias úteis (cada peça é feita sob encomenda)</li>
-                <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
-                <li><strong>Certificação:</strong> Produto artesanal numerado e autenticado</li>
-            </ul>
+            <div class="accordion accordion-verde" id="accordionJoel">
+                <!-- Especificações Técnicas -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            🔧 Especificações Técnicas
+                        </button>
+                    </h2>
 
-            <h3>Cuidados e Conservação</h3>
-            <ul class="especificacoes">
-                <li><strong>Limpeza:</strong> Utilize pano macio e seco. Evite produtos químicos ou abrasivos</li>
-                <li><strong>Exposição:</strong> Evite luz solar direta por longos períodos</li>
-                <li><strong>Armazenamento:</strong> Mantenha em local seco e ventilado (15°C a 25°C)</li>
-                <li><strong>Manuseio:</strong> Segure sempre pela base — o laço e a espada são delicados</li>
-            </ul>
+                    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+                        <div class="accordion-body">
+                            <ul class="especificacoes_verde">
+                                <li><strong>Material:</strong> PLA+ premium (biodegradável, resistente e livre de
+                                    toxinas)</li>
+                                <li><strong>Dimensões:</strong> 18cm (altura) x 8cm (largura) x 7cm (profundidade)</li>
+                                <li><strong>Peso:</strong> 220g (base firme e equilibrada)</li>
+                                <li><strong>Acabamento:</strong> Pintura artesanal com 7 camadas + verniz protetor
+                                    brilhante</li>
+                                <li><strong>Base:</strong> Inclusa – circular preta com logo “Mulher-Maravilha” em alto
+                                    relevo</li>
+                                <li><strong>Resolução de impressão:</strong> 0.1mm (ultra detalhada)</li>
+                                <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
+                                <li><strong>Tempo de produção:</strong> 3–5 dias úteis (cada peça é feita sob encomenda)
+                                </li>
+                                <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
+                                <li><strong>Certificação:</strong> Produto artesanal numerado e autenticado</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
-            <h3>Por que escolher Miniverse?</h3>
-            <p class="pq_escolher">
-                ✓ <strong>Qualidade Premium:</strong> Cada miniatura é produzida com acabamento artesanal impecável<br>
-                ✓ <strong>Sustentabilidade:</strong> Fabricada com PLA biodegradável e processo ecológico<br>
-                ✓ <strong>Artesanato Local:</strong> Criada no Brasil por artistas apaixonados por cultura geek<br>
-                ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora personalizada<br>
-                ✓ <strong>Certificado de Autenticidade:</strong> Peça numerada e assinada pelo artista criador<br>
-                ✓ <strong>Envio Seguro:</strong> Embalagem reforçada com rastreamento completo
-            </p>
+                <!-- Cuidados e Conservação -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#cuidadosCollapse" aria-expanded="false" aria-controls="cuidadosCollapse">
+                            🧹 Cuidados e Conservação
+                        </button>
+                    </h2>
+                    <div id="cuidadosCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+                        <div class="accordion-body">
+                            <ul class="especificacoes_verde">
+                                <li><strong>Limpeza:</strong> Utilize pano macio e seco. Evite produtos químicos ou
+                                    abrasivos</li>
+                                <li><strong>Exposição:</strong> Evite luz solar direta por longos períodos</li>
+                                <li><strong>Armazenamento:</strong> Mantenha em local seco e ventilado (15°C a 25°C)
+                                </li>
+                                <li><strong>Manuseio:</strong> Segure sempre pela base — o laço e a espada são delicados
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Por que escolher Miniverse -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#porqueCollapse" aria-expanded="false" aria-controls="porqueCollapse">
+                            ✨ Por que escolher Miniverse?
+                        </button>
+                    </h2>
+                    <div id="porqueCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+                        <div class="accordion-body">
+                            <p class="pq_escolher_verde">
+                                ✓ <strong>Qualidade Premium:</strong> Cada miniatura é produzida com acabamento
+                                artesanal impecável<br>
+                                ✓ <strong>Sustentabilidade:</strong> Fabricada com PLA biodegradável e processo
+                                ecológico<br>
+                                ✓ <strong>Artesanato Local:</strong> Criada no Brasil por artistas apaixonados por
+                                cultura geek<br>
+                                ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora
+                                personalizada<br>
+                                ✓ <strong>Certificado de Autenticidade:</strong> Peça numerada e assinada pelo artista
+                                criador<br>
+                                ✓ <strong>Envio Seguro:</strong> Embalagem reforçada com rastreamento completo
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="acompanha">
                 <p>
@@ -192,7 +243,7 @@
         <div class="container py-4 py-md-5 px-4 px-md-3">
             <div class="row">
                 <div class="col-lg-3 mb-3"> <a class="d-inline-flex align-items-center mb-2 text-decoration-none"
-                        href="../../index.html" aria-label="Bootstrap"> <img
+                        href="../index.html" aria-label="Bootstrap"> <img
                             src="../../images/logo_miniverse_minimalista.png" height="80" width="80">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
@@ -209,9 +260,9 @@
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="marvel">Marvel</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="homemAranha.html">Homem-Aranha</a></li>
-                        <li class="mb-2"><a href="homemFerro.html">Homem de Ferro</a></li>
-                        <li class="mb-2"><a href="capitaoAmerica.html">Capitão América</a></li>
+                        <li class="mb-2"><a href="../marvel/homemAranha.html">Homem-Aranha</a></li>
+                        <li class="mb-2"><a href="../marvel/homemFerro.html">Homem de Ferro</a></li>
+                        <li class="mb-2"><a href="../marvel/capitaoAmerica.html">Capitão América</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
@@ -225,9 +276,12 @@
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="db">Dragon Ball</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="../dragonBall/goku.html" rel="noopener">Goku</a> </li>
-                        <li class="mb-2"> <a href="../dragonBall/vegeta.html" rel="noopener">Vegeta</a></li>
-                        <li class="mb-2"><a href="../dragonBall/piccolo.html" rel="noopener">Piccolo</a></li>
+                        <li class="mb-2"> <a href="../dragonBall/goku.html" rel="noopener">Goku</a>
+                        </li>
+                        <li class="mb-2"> <a href="../dragonBall/vegeta.html" rel="noopener">Vegeta</a>
+                        </li>
+                        <li class="mb-2"><a href="../dragonBall/piccolo.html" rel="noopener">Piccolo</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
@@ -241,7 +295,8 @@
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="star">Star Wars</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="../starWars/darthVader.html" rel="noopener">Darth Vader</a> </li>
+                        <li class="mb-2"> <a href="../starWars/darthVader.html" rel="noopener">Darth
+                                Vader</a> </li>
                         <li class="mb-2"> <a href="../starWars/yoda.html" rel="noopener">Yoda</a> </li>
                         <li class="mb-2"> <a href="../starWars/leia.html" rel="noopener">Leia</a> </li>
                     </ul>
@@ -267,6 +322,7 @@
         });
     </script>
 
+    <script src="../../js/produto.js"></script>
 </body>
 
 </html>
