--- a/miniverse/html/produtos_halloween/pennywise.html
+++ b/miniverse/html/produtos_halloween/pennywise.html
@@ -7,11 +7,10 @@
     <title>Miniverse | Pennywise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../css/teste.css">
+    <link rel="stylesheet" href="../../css/styleProd.css">
     <link rel="shortcut icon" type="imagex/png" href="/miniverse/images/logo_miniverse_minimalista.png" />
     <!-- Link para o CSS do Select2 -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
-
     <!-- Link para o jQuery (necessário para o Select2) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -22,12 +21,11 @@
 
 <body class="tema-laranja">
 
-    <header style="font-size: 20px; background-color: #000000;" id="inicio">
-        <div class="line" style="filter: hue-rotate(230deg);"></div>
+    <header style="font-size: 20px; background-color: #092e2b;" id="inicio">
+        <div class="line"></div>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="../index.html"><img src="../../images/logo_miniverse_minimalista.png"
-                        style="width: 55px; filter: hue-rotate(230deg)"></a>
+                <a href="../index.html"><img src="../../images/logo_miniverse_minimalista.png" style="width: 55px;"></a>
                 <p class="miniverse">MINIVERSE</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -38,40 +36,33 @@
                     <div style="margin-left: auto; margin-right: auto;  ">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                             <li class="nav-item">
-                                <a class="nav-link a_li_header_halloween" aria-current="page"
-                                    href="../index.html">Home</a>
+                                <a class="nav-link a_li_header" aria-current="page" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link a_li_header_halloween" href="../produtos.html">Produtos</a>
+                                <a class="nav-link a_li_header" href="../produtos.html">Produtos</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle a_li_header_halloween" href="#" role="button"
+                                <a class="nav-link dropdown-toggle a_li_header" href="#" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     Marcas
                                 </a>
-                                <ul class="dropdown-menu dropmenu-marcas-halloween">
-                                    <li><a class="dropdown-item a_li_header_halloween"
-                                            href="../produtos.html#marvel">Marvel</a>
+                                <ul class="dropdown-menu dropmenu-marcas">
+                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#marvel">Marvel</a>
                                     </li>
-                                    <li><a class="dropdown-item a_li_header_halloween" href="../produtos.html#dc">DC</a>
-                                    </li>
-                                    <li><a class="dropdown-item a_li_header_halloween"
-                                            href="../produtos.html#dragonball">Dragon
+                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#dc">DC</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#dragonball">Dragon
                                             Ball</a></li>
-                                    <li><a class="dropdown-item a_li_header_halloween" href="../produtos.html#tlou">The
-                                            Last of
+                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#tlou">The Last of
                                             Us</a></li>
-                                    <li><a class="dropdown-item a_li_header_halloween"
-                                            href="../produtos.html#starwars">Star
+                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#starwars">Star
                                             Wars</a> </li>
-                                    <li><a class="dropdown-item a_li_header_halloween"
-                                            href="../produtos.html#seresmito">Seres
+                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#seresmito">Seres
                                             Mitológicos</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
-                    <a href="carrinho.html"><img src="../../images/icon_carrinho.svg" class="d-flex"
+                    <a href="../carrinho.html"><img src="../../images/icon_carrinho.svg" class="d-flex"
                             style="width: 30px; margin-right: 20px;  filter: invert();"></a>
                     <a href="conta.html" data-bs-toggle="modal" data-bs-target="#exampleModal"><img
                             src="../../images/icon_conta.svg" class="d-flex" style="width: 30px; filter: invert();"></a>
@@ -248,8 +239,9 @@
             <div class="row">
                 <div class="col-lg-3 mb-3"> <a
                         class="d-inline-flex align-items-center mb-2 text-decoration-none a_footer_halloween"
-                        href="index.html" aria-label="Bootstrap"> <img src="../../images/logo_miniverse_minimalista.png"
-                            height="80" width="80" class="img_footer_halloween" style="filter: hue-rotate(230deg);">
+                        href="../index.html" aria-label="Bootstrap"> <img
+                            src="../../images/logo_miniverse_minimalista.png" height="80" width="80"
+                            class="img_footer_halloween" style="filter: hue-rotate(230deg);">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
                             fill="currentColor"></path>
@@ -265,19 +257,20 @@
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="marvel" style="color: orange;">Marvel</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a class="a_footer_halloween" href="./marvel/homemAranha.html">Homem-Aranha</a>
+                        <li class="mb-2"><a class="a_footer_halloween"
+                                href="../marvel/homemAranha.html">Homem-Aranha</a>
                         </li>
-                        <li class="mb-2"><a class="a_footer_halloween" href="./marvel/homemFerro.html">Homem de
+                        <li class="mb-2"><a class="a_footer_halloween" href="../marvel/homemFerro.html">Homem de
                                 Ferro</a></li>
-                        <li class="mb-2"><a class="a_footer_halloween" href="./marvel/capitaoAmerica.html">Capitão
+                        <li class="mb-2"><a class="a_footer_halloween" href="../marvel/capitaoAmerica.html">Capitão
                                 América</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="dc" style="color: orange;">DC</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a class="a_footer_halloween" href="./dc/batman.html">Batman</a></li>
-                        <li class="mb-2"><a class="a_footer_halloween" href="./dc/superman.html">Superman</a>
+                        <li class="mb-2"><a class="a_footer_halloween" href="../dc/batman.html">Batman</a></li>
+                        <li class="mb-2"><a class="a_footer_halloween" href="../dc/superman.html">Superman</a>
                         </li>
                         <li class="mb-2"><a class="a_footer_halloween"
                                 href="./dc/mulherMaravilha.html">Mulher-Maravilha</a></li>
@@ -286,44 +279,44 @@
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="db" style="color: orange;">Dragon Ball</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a class="a_footer_halloween" href="./dragonBall/goku.html"
+                        <li class="mb-2"> <a class="a_footer_halloween" href="../dragonBall/goku.html"
                                 rel="noopener">Goku</a> </li>
-                        <li class="mb-2"> <a class="a_footer_halloween" href="./dragonBall/vegeta.html"
+                        <li class="mb-2"> <a class="a_footer_halloween" href="../dragonBall/vegeta.html"
                                 rel="noopener">Vegeta</a></li>
-                        <li class="mb-2"><a class="a_footer_halloween" href="./dragonBall/piccolo.html"
+                        <li class="mb-2"><a class="a_footer_halloween" href="../dragonBall/piccolo.html"
                                 rel="noopener">Piccolo</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="tlou" style="color: orange;">The Last of Us</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a class="a_footer_halloween" href="./tlou/joel.html" rel="noopener">Joel</a>
+                        <li class="mb-2"> <a class="a_footer_halloween" href="../tlou/joel.html" rel="noopener">Joel</a>
                         </li>
-                        <li class="mb-2"> <a class="a_footer_halloween" href="./tlou/ellie.html"
+                        <li class="mb-2"> <a class="a_footer_halloween" href="../tlou/ellie.html"
                                 rel="noopener">Ellie</a> </li>
-                        <li class="mb-2"> <a class="a_footer_halloween" href="./tlou/abby.html" rel="noopener">Abby</a>
+                        <li class="mb-2"> <a class="a_footer_halloween" href="../tlou/abby.html" rel="noopener">Abby</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="star" style="color: orange;">Star Wars</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a class="a_footer_halloween" href="./starWars/darthVader.html"
+                        <li class="mb-2"> <a class="a_footer_halloween" href="../starWars/darthVader.html"
                                 rel="noopener">Darth Vader</a> </li>
-                        <li class="mb-2"> <a class="a_footer_halloween" href="./starWars/yoda.html"
+                        <li class="mb-2"> <a class="a_footer_halloween" href="../starWars/yoda.html"
                                 rel="noopener">Yoda</a> </li>
-                        <li class="mb-2"> <a class="a_footer_halloween" href="./starWars/leia.html"
+                        <li class="mb-2"> <a class="a_footer_halloween" href="../starWars/leia.html"
                                 rel="noopener">Leia</a> </li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="mito" style="color: orange;">Seres Mitológicos</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a class="a_footer_halloween" href="./seresMito/zeus.html"
+                        <li class="mb-2"> <a class="a_footer_halloween" href="../seresMito/zeus.html"
                                 rel="noopener">Zeus</a> </li>
-                        <li class="mb-2"> <a class="a_footer_halloween" href="./seresMito/minotauro.html"
+                        <li class="mb-2"> <a class="a_footer_halloween" href="../seresMito/minotauro.html"
                                 rel="noopener">Minotauro</a> </li>
-                        <li class="mb-2"> <a class="a_footer_halloween" href="./seresMito/medusa.html"
+                        <li class="mb-2"> <a class="a_footer_halloween" href="../seresMito/medusa.html"
                                 rel="noopener">Medusa</a>
                         </li>
                     </ul>
@@ -340,6 +333,7 @@
         });
     </script>
 
+    <script src="../../js/produto.js"></script>
 </body>
 
 </html>
