--- a/miniverse/html/carrinho.html
+++ b/miniverse/html/carrinho.html
@@ -162,7 +162,7 @@
                 </div>
                 <div class="botao-comprar-c">
                     <button type="button" class="btn btn-outline-success button" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop" style="margin-top: 2%;">
+                        data-bs-target="#staticBackdrop" style="margin-top: 2%;" onclick="finalizarCompra()">
                         Comprar
                     </button>
                 </div>
@@ -250,6 +250,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+
+    <script src="../js/carrinho.js"></script>
 </body>
 
 </html>
