--- a/miniverse/html/seresMito/zeus.html
+++ b/miniverse/html/seresMito/zeus.html
@@ -7,7 +7,7 @@
     <title>Miniverse | Zeus</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../css/teste.css">
+    <link rel="stylesheet" href="../../css/styleProd.css">
     <link rel="shortcut icon" type="imagex/png" href="/miniverse/images/logo_miniverse_minimalista.png" />
     <!-- Link para o CSS do Select2 -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
@@ -63,7 +63,7 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="carrinho.html"><img src="../../images/icon_carrinho.svg" class="d-flex"
+                    <a href="../carrinho.html"><img src="../../images/icon_carrinho.svg" class="d-flex"
                             style="width: 30px; margin-right: 20px;  filter: invert();"></a>
                     <a href="conta.html" data-bs-toggle="modal" data-bs-target="#exampleModal"><img
                             src="../../images/icon_conta.svg" class="d-flex" style="width: 30px; filter: invert();"></a>
@@ -259,9 +259,9 @@
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="marvel">Marvel</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="homemAranha.html">Homem-Aranha</a></li>
-                        <li class="mb-2"><a href="homemFerro.html">Homem de Ferro</a></li>
-                        <li class="mb-2"><a href="capitaoAmerica.html">Capitão América</a></li>
+                        <li class="mb-2"><a href="../marvel/homemAranha.html">Homem-Aranha</a></li>
+                        <li class="mb-2"><a href="../marvel/homemFerro.html">Homem de Ferro</a></li>
+                        <li class="mb-2"><a href="../marvel/capitaoAmerica.html">Capitão América</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
@@ -321,6 +321,7 @@
         });
     </script>
 
+    <script src="../../js/produto.js"></script>
 </body>
 
 </html>
