tentando fazer o carrinho funcionar

--- a/miniverse/html/carrinho.html
+++ b/miniverse/html/carrinho.html
@@ -90,26 +90,11 @@
         </div>
         <div class="conteudo-c">
             <div class="produtos-c">
-                <div class="produto-c">
-                    <img src="../images/coroa_planos.png">
-                    <div class="detalhesp-c">
-                        <h1>Plano de Assinatura Ativo</h1>
-                        <p>Descrição do produto**</p>
+                <div style="text-align: center; padding: 50px;">
+                    <div class="spinner-border text-success" role="status">
+                        <span class="visually-hidden">Carregando...</span>
                     </div>
-                    <div style="margin-left: auto; margin-right: 6%;">
-                        <h1>R$249,90/mês</h1>
-                    </div>
-                </div>
-                <hr class="linha-c">
-                <div class="produto-c">
-                    <img src="../images/produtos_dragonBall/Vegeta.png" style="border-radius: 20px;">
-                    <div class="detalhesp-c">
-                        <h1>Vegeta</h1>
-                        <p>Descrição do produto**</p>
-                    </div>
-                    <div style="margin-left: auto; margin-right: 6%;">
-                        <h1>R$200,00</h1>
-                    </div>
+                    <p style="margin-top: 20px; color: #666;">Carregando carrinho...</p>
                 </div>
             </div>
             <div class="total-c">
