--- a/miniverse/html/index.html
+++ b/miniverse/html/index.html
@@ -163,7 +163,7 @@
             <div class="col divs_funcoes_site">
                 <a href="planos.html">
                     <div class="div_diferencial_site">
-                        <img src="..." alt="..." class="evento-img">
+                        <img src="../images/img_planos.svg" class="evento-img">
                         <div class="overlay"></div>
                         <div class="texto-sobre">Planos de assinatura</div>
                     </div>
